[package]
name = "infinite-db"
version = "0.1.1"
authors = ["Jonesey's Innovation"]
edition = "2024"
description = "A spatial-graph database using n-dimensional curves and hyperedges for engineering logic."
license = "MIT"
keywords = ["database", "spatial", "hypergraph", "engineering", "peano"]
categories = ["database-implementations", "science"]
repository = "https://github.com/joneseysinno/infinitedb.git"
exclude = ["target/**"]

[features]
default = ["embedded"]
embedded = []
server = ["embedded", "dep:tokio"]
sync = ["server"]

[dependencies]
# Serialization — zero-copy reads from storage
bincode = "2"
serde = { version = "1", features = ["derive"] }

# Checksums — WAL integrity and Merkle hashing
blake3 = "1"

# Async runtime — server and NVMe I/O (server feature only)
tokio = { version = "1", features = ["full"], optional = true }

# Random session IDs
getrandom = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
